--- a/css/email.css
+++ b/css/email.css
@@ -17,6 +17,11 @@
   scroll-behavior: smooth;
   outline: none;
 }
+
+button {
+  cursor: pointer;
+}
+
 body {
   font-family: sans-serif;
   background-color: #020202;
@@ -243,7 +248,7 @@ input {
   }
   .buttonClose {
     position: absolute;
-    margin-left: 79vw;
+    margin-left: 70vw;
     margin-top: 8.07vw;
     display: block;
     width: 6.4vw;
