--- a/css/header.css
+++ b/css/header.css
@@ -50,7 +50,7 @@
   }
   .langHide li:not(.languageActive) {
     display: none;
-  }
+      }
   .langShow {
     display: flex;
     flex-direction: column;
@@ -89,13 +89,17 @@
     transform: rotate(180deg);
     margin-top: -0.9vw;
     margin-left: -1.88vw;
+    transition: 0.5s;
+cursor: pointer;
     width: 1.25vw;
     height: 1.25vw;
   }
   .langShow .langImg {
     position: absolute;
     margin-top: -0.7vw;
+    transition: 0.5s;
     margin-left: -1.88vw;
+    cursor: pointer;
     width: 1.25vw;
     height: 1.25vw;
   }
