--- a/css/mainPage/hero.css
+++ b/css/mainPage/hero.css
@@ -1,4 +1,13 @@
 @media only screen and (min-width: 1180px) {
+  
+  a {
+    transition: 0.7s;
+    opacity: 100;
+  }
+  a:hover {
+    opacity: 0.6;
+  }
+
   .hero {
     width: 98.11vw;
     display: flex;
@@ -10,7 +19,7 @@
     position: absolute;
     margin-top: -3.91vw;
     margin-left: 18.23vw;
-    content: '';
+    content: "";
     display: block;
     width: 3vw;
     height: 3vw;
@@ -87,18 +96,14 @@
     font-size: 1.04vw;
     font-style: normal;
     font-weight: 600;
-
+    transition: 0.7s;
+    opacity: 100;
     background: linear-gradient(119deg, #bd00ff 21.38%, #3604c3 129.88%);
   }
-  .buttonHeader:hover {
-    background: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.2) 0%,
-        rgba(0, 0, 0, 0.2) 100%
-      ),
-      linear-gradient(119deg, #bd00ff 21.38%, #3604c3 129.88%);
-  }
 
+  .buttonHeader:hover {
+    opacity: 0.6;
+  }
 }
 @media only screen and (max-width: 1179px) {
   .hero {
@@ -114,7 +119,7 @@
     margin-top: 2vw;
     /* margin-left: 18.23vw; */
     margin-right: -27.99vw;
-    content: '';
+    content: "";
     display: block;
     width: 7vw;
     height: 7vw;
@@ -122,7 +127,7 @@
     border: 0.15vw solid #fff;
     background: rgba(217, 217, 217, 0.2);
     backdrop-filter: blur(10px);
-    
+
     animation-name: leftRight;
     animation-duration: 3s;
     animation-timing-function: ease-in-out;
@@ -185,12 +190,13 @@
     font-style: normal;
     font-weight: 400;
   }
+
   .buttonHeader {
     margin-top: 6.77vw;
     padding: 2.08vw 11.85vw;
     border-radius: 52.08vw;
 
-    font-size: 2.60vw;
+    font-size: 2.6vw;
     font-style: normal;
     font-weight: 600;
     align-items: center;
@@ -217,14 +223,14 @@
     align-items: center;
   }
   .hero::before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
 
     margin-top: -64.91vw;
     margin-left: -20vw;
-    width: 12.80vw;
-    height: 12.80vw;
+    width: 12.8vw;
+    height: 12.8vw;
 
     border-radius: 8vw;
     border: 0.15vw solid #fff;
@@ -253,11 +259,9 @@
     margin-top: 40.22vw;
     margin-left: 0.58vw;
 
-
     width: 84.53vw;
 
-    
-    height: 20.80vw;
+    height: 20.8vw;
   }
   .heroBackground {
     margin-top: 0;
@@ -298,7 +302,7 @@
     font-weight: 400;
   }
   .buttonHeader {
-    margin-top: 28.80vw;
+    margin-top: 28.8vw;
     padding: 4.27vw 24.27vw;
     border-radius: 52.08vw;
 
