--- a/css/mainPage/project.css
+++ b/css/mainPage/project.css
@@ -9,7 +9,7 @@
     flex-direction: column;
   }
   .projectsH2 {
-    width: 25.73vw;
+    width: 26.73vw;
     margin-right: 35.73vw;
 
     font-size: 2.92vw;
@@ -215,7 +215,6 @@
     justify-content: center;
     align-items: center;
     gap: 0.52vw;
-
     border-radius: 52.08vw;
     background: linear-gradient(88deg, #d5b105 0%, #f1ad00 93.39%);
   }
@@ -226,7 +225,8 @@
         rgba(0, 0, 0, 0.2) 100%
       ),
       linear-gradient(88deg, #d5b105 0%, #f1ad00 93.39%);
-  }
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
   .projectImage3 {
     z-index: 0;
     width: 13.65vw;
@@ -389,7 +389,7 @@
     display: flex;
     width: 100%;
     padding: 1.4vw 0;
-    font-size: 2.08vw;
+    font-size: 1.2vw;
     font-weight: 600;
     justify-content: center;
     align-items: center;
@@ -457,7 +457,7 @@
     display: flex;
     width: 100%;
     padding: 1.4vw 0;
-    font-size: 2.08vw;
+    font-size: 1.2vw;
     font-weight: 600;
     justify-content: center;
     align-items: center;
@@ -600,7 +600,7 @@
     display: flex;
     width: 100%;
     padding: 1.4vw 0;
-    font-size: 2.08vw;
+    font-size: 1.2vw;
     font-weight: 600;
     justify-content: center;
     align-items: center;
