--- a/css/mainPage/project.css
+++ b/css/mainPage/project.css
@@ -15,7 +15,21 @@
     font-size: 2.92vw;
     font-style: normal;
     font-weight: 700;
+    animation: 2s show ease;
   }
+
+  @keyframes show {
+    0% {
+        left:0px;
+        opacity: 0;
+      }
+      100% {
+        left:30px;
+        opacity:1;
+      }
+    } 
+
+
   .projectsCards {
     display: grid;
     grid-template-columns: repeat(2, 28.13vw);
