--- a/css/email.css
+++ b/css/email.css
@@ -43,6 +43,7 @@ body {
   display: block;
   width: 1.25vw;
   height: 1.25vw;
+  transition: 0.5s;
 }
 .buttonClose::after {
   content: url("../img/email/ButtonClose.svg");
@@ -53,6 +54,11 @@ body {
 .buttonClose:hover:after {
   content: url("../img/email/ButtonCloseHover.svg");
 }
+
+.buttonCloseContainer{
+transition: 0.5s;
+}
+
 .emailForm {
   margin-top: 7.29vw;
   width: 41.67vw;
