--- a/css/mainPage/footer.css
+++ b/css/mainPage/footer.css
@@ -252,7 +252,6 @@
     text-align: center;
   }
   footer .navigator li:hover {
-    font-size: 0.78vw;
     font-weight: 700;
   }
 
@@ -267,6 +266,7 @@
   .footerInfo {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 2.08vw;
   }
   .mediaInfo {
