--- a/css/index.css
+++ b/css/index.css
@@ -719,6 +719,8 @@ main {
     overflow: hidden;
     display: flex;
     justify-content: space-between;
+    position: absolute;
+    left: -100%;
   }
   .projectsFragmentInfo1 {
     display: flex;
@@ -1005,12 +1007,6 @@ main {
     background-size: cover;
     background-image: url(../img/page4-1.png);
   }
-
-
-
-
-
-
 
 
 
