--- a/css/mainPage/servise.css
+++ b/css/mainPage/servise.css
@@ -34,6 +34,14 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.56vw;
+    transition: all 0.9s;
+    transform: translateX(30%);
+    opacity: 0;
+  }
+
+  .animationBottom {
+    transform: translateX(0%);
+    opacity: 1;
   }
 
   .servicesCards a {
