--- a/css/mainPage/body.css
+++ b/css/mainPage/body.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Open+Sans:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Open+Sans:wght@700&family=Poppins:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Open+Sans:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Open+Sans:wght@700&family=Poppins:wght@300;400;500;600;700;800&display=swap");
 ::-webkit-scrollbar {
   background: transparent;
 }
@@ -7,14 +7,21 @@
   border-radius: 100px;
   background: linear-gradient(119deg, #bd00ff 21.38%, #3604c3 129.88%);
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
+  }
+}
+
 * {
   color: #ffffff;
   list-style: none;
   text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 body {
   font-family: sans-serif;
@@ -22,10 +29,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 .borderText {
   font-weight: 800;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-text-fill-color: #000;
   -webkit-text-stroke: 1.5px #fff;
   letter-spacing: 2.5px;
@@ -40,7 +48,7 @@ main {
 
 @media only screen and (min-width: 1180px) {
   body {
-  width: 100%;
+    width: 100%;
   }
   .imageHero {
     display: block;
@@ -84,9 +92,9 @@ main {
   .tablet {
     display: none;
   }
-  .imageHero{
+  .imageHero {
     margin-top: 24.42vw;
-    margin-bottom:0;
+    margin-bottom: 0;
     width: 100vw;
   }
 }
