--- a/css/abi/abi.css
+++ b/css/abi/abi.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:wght@700&family=Poppins:wght@300;400;500;600;700;800&display=swap");
 ::-webkit-scrollbar {
-  background: transparent; 
+  background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  border-radius: 100px;
+  border-radius: 5.21vw;
   background: linear-gradient(119deg, #bd00ff 21.38%, #3604c3 129.88%);
 }
 * {
@@ -66,6 +66,11 @@ a:hover {
   margin-top: 3.33vw;
   width: 61.77vw;
 }
+.organicShopAnimation {
+  transition: all 0.9s;
+  transform: translateX(-30%);
+  opacity: 0;
+}
 #organicShop h4 {
   color: #4d83f0;
   font-size: 1.25vw;
@@ -82,8 +87,15 @@ a:hover {
   display: flex;
   align-items: center;
 }
+
+.aboutProject {
+  transition: all 0.9s;
+  transform: translateX(30%);
+  opacity: 0;
+}
+
 #aboutProject img {
- width: 20.83vw; 
+  width: 20.83vw;
 }
 #aboutProject div {
   display: flex;
@@ -91,12 +103,12 @@ a:hover {
   justify-content: center;
   align-items: start;
   text-align: start;
-  gap: 2.50vw;
+  gap: 2.5vw;
 }
 .aboutProjectBr {
   display: block;
   margin: 0 5.73vw;
-  width: 0.10vw;
+  width: 0.1vw;
   height: 10.42vw;
   background: radial-gradient(
     4979852.87% 58.76% at 50% 49.67%,
@@ -118,11 +130,18 @@ a:hover {
 }
 
 #goalsAndObjectives {
-  width: 61.46vw;;
+  width: 61.46vw;
   margin: 7.29vw 0;
 }
+
+.goalsAndObjectives {
+  transition: all 0.9s;
+  transform: translateX(-30%);
+  opacity: 0;
+}
+
 #goalsAndObjectives ul {
-  margin-top: 2.50vw;
+  margin-top: 2.5vw;
   display: flex;
   gap: 1.46vw;
 }
@@ -250,6 +269,74 @@ a:hover {
   align-items: center;
   width: 1.04vw;
   height: 1.04vw;
+}
+
+.animationTop {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.animationRight {
+  transform: translateX(0%);
+  opacity: 1;
+}
+
+.mainPageAnimation {
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPageAnimationDe {
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPageAnimation {
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPagePictureOneAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPagePictureTwoAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPagePictureThreeAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(70%);
+}
+
+.InternalPagePictureFourAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(70%);
+}
+
+.InternalPagePictureFiveAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(70%);
+}
+
+
+.animationLeft {
+  transform: translateX(0%);
+  opacity: 1;
+}
+
+.animationOpacity {
+  opacity: 1;
 }
 
 @media screen and (max-width: 1179px) {
@@ -427,7 +514,7 @@ a:hover {
     width: 83.33vw;
     border-radius: 5.21vw;
     justify-content: space-between;
-    margin: 12.8vw 0;
+    margin-bottom: 12.8vw;
   }
 
   #nav a {
@@ -630,7 +717,7 @@ a:hover {
     width: 91.467vw;
     border-radius: 10.67vw;
     justify-content: space-between;
-    margin: 12.8vw 0;
+    margin-bottom: 12.8vw;
   }
 
   #nav a {
