--- a/css/pagesShop/pagesShop.css
+++ b/css/pagesShop/pagesShop.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:wght@700&family=Poppins:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:wght@700&family=Poppins:wght@300;400;500;600;700;800&display=swap");
 ::-webkit-scrollbar {
   background: transparent;
-} 
+}
 ::-webkit-scrollbar-thumb {
-  border-radius: 100px;
+  border-radius: 5.21vw;
   background: linear-gradient(119deg, #bd00ff 21.38%, #3604c3 129.88%);
 }
 * {
@@ -50,7 +50,7 @@ h3 {
 a {
   transition: 0.7s;
   opacity: 100;
-}
+} 
 a:hover {
   opacity: 0.6;
 }
@@ -65,6 +65,11 @@ a:hover {
 #organicShop {
   margin-top: 3.33vw;
   width: 61.77vw;
+}
+.organicShopAnimation {
+  transition: all 0.9s;
+  transform: translateX(-30%);
+  opacity: 0;
 }
 #organicShop h4 {
   color: #50d13b;
@@ -82,8 +87,15 @@ a:hover {
   display: flex;
   align-items: center;
 }
+
+.aboutProject {
+  transition: all 0.9s;
+  transform: translateX(30%);
+  opacity: 0;
+}
+
 #aboutProject img {
- width: 20.83vw; 
+  width: 20.83vw;
 }
 #aboutProject div {
   display: flex;
@@ -91,12 +103,12 @@ a:hover {
   justify-content: center;
   align-items: start;
   text-align: start;
-  gap: 2.50vw;
+  gap: 2.5vw;
 }
 .aboutProjectBr {
   display: block;
   margin: 0 5.73vw;
-  width: 0.10vw;
+  width: 0.1vw;
   height: 10.42vw;
   background: radial-gradient(
     4979852.87% 58.76% at 50% 49.67%,
@@ -118,11 +130,18 @@ a:hover {
 }
 
 #goalsAndObjectives {
-  width: 61.46vw;;
+  width: 61.46vw;
   margin: 7.29vw 0;
 }
+
+.goalsAndObjectives {
+  transition: all 0.9s;
+  transform: translateX(-30%);
+  opacity: 0;
+}
+
 #goalsAndObjectives ul {
-  margin-top: 2.50vw;
+  margin-top: 2.5vw;
   display: flex;
   gap: 1.46vw;
 }
@@ -231,7 +250,7 @@ a:hover {
 }
 
 #nav a:hover {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 #nav div {
@@ -249,6 +268,104 @@ a:hover {
   align-items: center;
   width: 1.04vw;
   height: 1.04vw;
+}
+
+.animationTop {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.animationRight {
+  transform: translateX(0%);
+  opacity: 1;
+}
+
+.mainPageAnimation {
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPageAnimationDe {
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPageAnimation {
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPagePictureOneAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPagePictureTwoAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPagePictureThreeAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(70%);
+}
+
+.InternalPagePictureFourAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(70%);
+}
+
+.InternalPagePictureFiveAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(70%);
+}
+
+.InternalPagePictureOneAnimationDE{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPagePictureTwoAnimationDE{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.InternalPagePictureThreeAnimationDE{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(70%);
+}
+
+.InternalPagePictureFourAnimationDE{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(70%);
+}
+
+.InternalPagePictureFiveAnimationDE{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(70%);
+}
+
+
+.animationLeft {
+  transform: translateX(0%);
+  opacity: 1;
+}
+
+.animationOpacity {
+  opacity: 1;
 }
 
 @media screen and (max-width: 1179px) {
@@ -450,8 +567,8 @@ a:hover {
     height: 5.333vw;
   }
   #nav div img {
-    width: 2.60vw;
-    height: 2.60vw;
+    width: 2.6vw;
+    height: 2.6vw;
   }
 }
 
@@ -653,7 +770,7 @@ a:hover {
     height: 5.333vw;
   }
   #nav div img {
-width: 5.33vw;
-height: 5.33vw;
+    width: 5.33vw;
+    height: 5.33vw;
   }
 }
