--- a/css/abi/abi.css
+++ b/css/abi/abi.css
@@ -329,6 +329,17 @@ a:hover {
   transform: translateX(70%);
 }
 
+.PictureOneAnimation {
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.PictureTwoAnimation {
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
 
 .animationLeft {
   transform: translateX(0%);
