--- a/css/whiteCollar/whiteCollar.css
+++ b/css/whiteCollar/whiteCollar.css
@@ -286,6 +286,12 @@ a:hover {
   transform: translateX(-30%);
 }
 
+.imgAnimation {
+  opacity: 0;
+  transform: translateY(30%);
+  transition: ease-in-out 0.9s;
+}
+
 .InternalPageAnimationDe {
   opacity: 0;
   transition: all 0.9s;
@@ -358,6 +364,17 @@ a:hover {
   transform: translateX(70%);
 }
 
+.PictureOneAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
+
+.PictureTwoAnimation{
+  opacity: 0;
+  transition: all 0.9s;
+  transform: translateX(-30%);
+}
 
 .animationLeft {
   transform: translateX(0%);
