--- a/css/mainPage/body.css
+++ b/css/mainPage/body.css
@@ -21,7 +21,7 @@
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-  /* scroll-behavior: smooth; */
+  scroll-behavior: smooth;
 }
 body {
   font-family: sans-serif;
